ProjetCompil/Verif/Test/fail/for3.cas
program
	B : real;
	A : 1..14;
begin
	for A := A to B do 
      		null ; 
  	end ; 
	
end.
	